--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,29 +1,38 @@
 [versions]
 agp = "8.5.2"
+comGoogleDevtoolsKspGradlePlugin = "1.9.0-1.0.12"
 kotlin = "1.9.0"
-coreKtx = "1.15.0"
+coreKtx = "1.13.1"
 glanceMaterial3 = "1.1.1"
 glanceAppwidgetVersion = "1.1.1"
 junit = "4.13.2"
-junitVersion = "1.2.1"
-espressoCore = "3.6.1"
+junitVersion = "1.1.5"
+espressoCore = "3.5.1"
 lifecycleRuntimeKtx = "2.8.7"
-activityCompose = "1.9.3"
+activityCompose =  "1.8.0"
 composeBom = "2024.04.01"
 appcompat = "1.7.0"
 material = "1.12.0"
 
-retrofit = "2.9.0"
+gradleDependencyGraphGeneratorPlugin = "0.8.0"
+
+retrofit = "2.11.0"
 gson = "2.10.1"
 
-hiltAndroidGradlePlugin = "2.46.1"
-hilt = "2.48.1"
+
+hiltAndroidGradlePlugin = "2.49"
+hilt = "2.49"
+hiltNavigationCompose = "1.2.0"
+
+ioCoil = "2.7.0"
+material3Android = "1.3.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-glance-appwidget-v110 = { module = "androidx.glance:glance-appwidget", version.ref = "glanceAppwidgetVersion" }
 androidx-glance-material = { module = "androidx.glance:glance-material", version.ref = "glanceAppwidgetVersion" }
 androidx-glance-material3 = { module = "androidx.glance:glance-material3", version.ref = "glanceMaterial3" }
+com-google-devtools-ksp-gradle-plugin = { module = "com.google.devtools.ksp:com.google.devtools.ksp.gradle.plugin", version.ref = "comGoogleDevtoolsKspGradlePlugin" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -49,9 +58,17 @@ retrofit-core = { group = "com.squareup.retrofit2", name = "retrofit", version.r
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt" }
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-android-gradle-plugin = { module = "com.google.dagger:hilt-android-gradle-plugin", version.ref = "hiltAndroidGradlePlugin" }
+hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
+
+#coil
+coil-kt = { group = "io.coil-kt", name = "coil-compose", version.ref = "ioCoil" }
+
+gradle-dependency-graph-generator-plugin = { module = "com.vanniktech:gradle-dependency-graph-generator-plugin", version.ref = "gradleDependencyGraphGeneratorPlugin" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 android-library = { id = "com.android.library", version.ref = "agp" }
-
+kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
+kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
