--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 agp = "8.5.2"
 comGoogleDevtoolsKspGradlePlugin = "1.9.0-1.0.12"
+compose = "1.0.0-beta01"
 kotlin = "1.9.0"
 coreKtx = "1.13.1"
 glanceMaterial3 = "1.1.1"
@@ -32,6 +33,7 @@ androidx-glance-appwidget-v110 = { module = "androidx.glance:glance-appwidget", 
 androidx-glance-material = { module = "androidx.glance:glance-material", version.ref = "glanceAppwidgetVersion" }
 androidx-glance-material3 = { module = "androidx.glance:glance-material3", version.ref = "glanceMaterial3" }
 com-google-devtools-ksp-gradle-plugin = { module = "com.google.devtools.ksp:com.google.devtools.ksp.gradle.plugin", version.ref = "comGoogleDevtoolsKspGradlePlugin" }
+compose = { module = "com.github.bumptech.glide:compose", version.ref = "compose" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
