--- a/main/src/main/AndroidManifest.xml
+++ b/main/src/main/AndroidManifest.xml
@@ -14,17 +14,17 @@
                 android:resource="@xml/widget_new_anime_horizon" />
         </receiver>
 
-        <receiver
-            android:name=".ui.wiget.xml.WidgetNewAnimeInfo"
-            android:exported="false">
-            <intent-filter>
-                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
-            </intent-filter>
+<!--        <receiver-->
+<!--            android:name=".ui.wiget.xml.WidgetNewAnimeInfo"-->
+<!--            android:exported="false">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />-->
+<!--            </intent-filter>-->
 
-            <meta-data
-                android:name="android.appwidget.provider"
-                android:resource="@xml/widget_new_anime_vertical" />
-        </receiver>
+<!--            <meta-data-->
+<!--                android:name="android.appwidget.provider"-->
+<!--                android:resource="@xml/widget_new_anime_vertical" />-->
+<!--        </receiver>-->
 
         <activity
             android:name=".MainActivity"
