--- a/main/src/main/AndroidManifest.xml
+++ b/main/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
 
     <application>
         <receiver
-            android:name=".ui.wiget.xml.WidgetNewAnimeInfo"
+            android:name=".ui.wiget.xml.WidgetAnimeInfoHorizon"
             android:exported="false">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
@@ -13,7 +13,17 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/widget_new_anime_horizon" />
         </receiver>
+        <receiver
+            android:name=".ui.wiget.xml.WidgetAnimeInfoVertical"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
 
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_new_anime_vertical" />
+        </receiver>
 <!--        <receiver-->
 <!--            android:name=".ui.wiget.xml.WidgetNewAnimeInfo"-->
 <!--            android:exported="false">-->
